--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,10 +8,12 @@
             "targets": [
                 "all"
             ],
-            "group": "build",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
             "problemMatcher": [],
             "detail": "CMake template build task"
-        },
-        
+        }
     ]
 }
